--- a/Programming Assignment_12.ipynb
+++ b/Programming Assignment_12.ipynb
@@ -89,22 +89,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: 'Shawerma', 2: 'Pizza', 3: 'Burger'}"
+       "{1: ['Shawerma', 'Pizza', 'Burger'],\n",
+       " 2: ['Shawerma', 'Pizza', 'Burger'],\n",
+       " 3: ['Shawerma', 'Pizza', 'Burger']}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "flatten_dict = lambda dict_key, dict_value : dict(zip(dict_key, dict_value))\n",
+    "flatten_dict = lambda dict_key, dict_value : dict.fromkeys(dict_key, dict_value)\n",
     "\n",
     "food_options = {'index': [1,2,3],\n",
     "                'food': ['Shawerma', 'Pizza', 'Burger']}\n",
