--- a/Python_Programming_Assignments/Programming Assignment_18.ipynb
+++ b/Python_Programming_Assignments/Programming Assignment_18.ipynb
@@ -1,6 +1,231 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q1)\n",
+    "Create a function that takes a list of non-negative integers and strings and return a new list\n",
+    "without the strings.\n",
+    "Examples\n",
+    "1. filter_list([1, 2, &quot;a&quot;, &quot;b&quot;]) ➞ [1, 2]\n",
+    "2. filter_list([1, &quot;a&quot;, &quot;b&quot;, 0, 15]) ➞ [1, 0, 15]\n",
+    "3. filter_list([1, 2, &quot;aasf&quot;, &quot;1&quot;, &quot;123&quot;, 123]) ➞ [1, 2, 123]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 0, 15]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_string(string):\n",
+    "    return False if type(string)==str else True\n",
+    "def filter_list(listy):\n",
+    "    return list(filter(is_string, listy))\n",
+    "\n",
+    "filter_list([1, \"a\", \"b\", 0, 15])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q2) The &quot;Reverser&quot; takes a string as input and returns that string in reverse order, with the\n",
+    "opposite case.\n",
+    "Examples\n",
+    "1. reverse(&quot;Hello World&quot;) ➞ &quot;DLROw OLLEh&quot;\n",
+    "2. reverse(&quot;ReVeRsE&quot;) ➞ &quot;eSrEvEr&quot;\n",
+    "3. reverse(&quot;Radar&quot;) ➞ &quot;RADAr&quot;\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DLROw OLLEh'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reserve = lambda string: string.swapcase()[::-1]\n",
+    "\n",
+    "\n",
+    "reserve(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q3) You can assign variables from lists like this:\n",
+    "\n",
+    "lst = [1, 2, 3, 4, 5, 6]\n",
+    "first = lst[0]\n",
+    "middle = lst[1:-1]\n",
+    "last = lst[-1]\n",
+    "\n",
+    "print(first) ➞ outputs 1\n",
+    "\n",
+    "print(middle) ➞ outputs [2, 3, 4, 5]\n",
+    "\n",
+    "print(last) ➞ outputs 6\n",
+    "\n",
+    "With Python 3, you can assign variables from lists in a much more succinct way. Create\n",
+    "variables first, middle and last from the given list using destructuring assignment\n",
+    "(check the Resources tab for some examples), where:\n",
+    "first ➞ 1\n",
+    "\n",
+    "middle ➞ [2, 3, 4, 5]\n",
+    "\n",
+    "last ➞ 6\n",
+    "\n",
+    "Your task is to unpack the list writeyourcodehere into three variables, being first,\n",
+    "middle, and last, with middle being everything in between the first and last element. Then\n",
+    "print all three variables.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[2, 3, 4, 5]\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1, 2, 3, 4, 5, 6]\n",
+    "first = lst[0]\n",
+    "middle = lst[1:-1]\n",
+    "last = lst[-1]\n",
+    "print(first)\n",
+    "print(middle)\n",
+    "print(last)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q4) Write a function that calculates the factorial of a number recursively.\n",
+    "Examples\n",
+    "1. factorial(5) ➞ 120\n",
+    "2. factorial(3) ➞ 6\n",
+    "3. factorial(1) ➞ 1\n",
+    "4. factorial(0) ➞ 1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial(num):\n",
+    "    if num == 1:\n",
+    "        return num\n",
+    "    return num*factorial(num-1)\n",
+    "\n",
+    "factorial(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q5) Write a function that moves all elements of one type to the end of the list.\n",
+    "Examples\n",
+    "1. move_to_end([1, 3, 2, 4, 4, 1], 1) ➞ [3, 2, 4, 4, 1, 1]\n",
+    "##### Move all the 1s to the end of the array.\n",
+    "2. move_to_end([7, 8, 9, 1, 2, 3, 4], 9) ➞ [7, 8, 1, 2, 3, 4, 9]\n",
+    "3. move_to_end([&quot;a&quot;, &quot;a&quot;, &quot;a&quot;, &quot;b&quot;], &quot;a&quot;) ➞ [&quot;b&quot;, &quot;a&quot;, &quot;a&quot;, &quot;a&quot;]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 2, 4, 4, 1, 1]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def move_to_end(listy, char):\n",
+    "    for i in range(listy.count(char)):\n",
+    "        listy.append(listy.pop(listy.index(char)))\n",
+    "    return listy\n",
+    "\n",
+    "move_to_end([1, 3, 2, 4, 4, 1], 1)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
