--- a/Python_Programming_Assignments/Programming Assignment_18.ipynb
+++ b/Python_Programming_Assignments/Programming Assignment_18.ipynb
@@ -30,10 +30,8 @@
     }
    ],
    "source": [
-    "def is_string(string):\n",
-    "    return False if type(string)==str else True\n",
-    "def filter_list(listy):\n",
-    "    return list(filter(is_string, listy))\n",
+    "is_not_string = lambda char: type(char) != str\n",
+    "filter_list = lambda listy: list(filter(is_not_string, listy))\n",
     "\n",
     "filter_list([1, \"a\", \"b\", 0, 15])"
    ]
