--- a/Python_Programming_Assignments/Programming Assignment_21.ipynb
+++ b/Python_Programming_Assignments/Programming Assignment_21.ipynb
@@ -1,11 +1,222 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Q1) Write a function that takes a list and a number as arguments. Add the number to the end of\n",
+    "the list, then remove the first element of the list. The function should then return the updated\n",
+    "list.\n",
+    "Examples\n",
+    "\n",
+    "1. next_in_line([5, 6, 7, 8, 9], 1) ➞ [6, 7, 8, 9, 1]\n",
+    "2. next_in_line([7, 6, 3, 23, 17], 10) ➞ [6, 3, 23, 17, 10]\n",
+    "3. next_in_line([1, 10, 20, 42 ], 6) ➞ [10, 20, 42, 6]\n",
+    "4. next_in_line([], 6) ➞ &quot;No list has been selected&quot;\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 42, 6]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 42, 6]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#option 1\n",
+    "next_in_line = lambda listy, num: listy[1:] + [num] if listy else \"No list has been selected\"\n",
+    "print(next_in_line([1, 10, 20, 42 ], 6))\n",
+    "\n",
+    "#option 2\n",
+    "def next_in_line(listy, num):\n",
+    "    listy.remove(listy[0])\n",
+    "    listy.append(num)\n",
+    "    return listy\n",
+    "\n",
+    "next_in_line([1, 10, 20, 42 ], 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q2) Create the function that takes a list of dictionaries and returns the sum of people&#39;s budgets.\n",
+    "Examples\n",
+    "\n",
+    "get_budgets([\n",
+    "{ &quot;name&quot;: &quot;John&quot;, &quot;age&quot;: 21, &quot;budget&quot;: 23000 },\n",
+    "{ &quot;name&quot;: &quot;Steve&quot;, &quot;age&quot;: 32, &quot;budget&quot;: 40000 },\n",
+    "{ &quot;name&quot;: &quot;Martin&quot;, &quot;age&quot;: 16, &quot;budget&quot;: 2700 }\n",
+    "]) ➞ 65700\n",
+    "\n",
+    "get_budgets([\n",
+    "{ &quot;name&quot;: &quot;John&quot;, &quot;age&quot;: 21, &quot;budget&quot;: 29000 },\n",
+    "{ &quot;name&quot;: &quot;Steve&quot;, &quot;age&quot;: 32, &quot;budget&quot;: 32000 },\n",
+    "{ &quot;name&quot;: &quot;Martin&quot;, &quot;age&quot;: 16, &quot;budget&quot;: 1600 }\n",
+    "]) ➞ 62600\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65700"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_budgets = lambda listy: sum([dictt['budget'] for dictt in listy])\n",
+    "\n",
+    "get_budgets([ { \"name\": \"John\", \"age\": 21, \"budget\": 23000 },\n",
+    "             { \"name\": \"Steve\", \"age\": 32, \"budget\": 40000 },\n",
+    "             { \"name\": \"Martin\", \"age\": 16, \"budget\": 2700 } ])    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q3) Create a function that takes a string and returns a string with its letters in alphabetical order.\n",
+    "Examples\n",
+    "\n",
+    "1. alphabet_soup(&quot;hello&quot;) ➞ &quot;ehllo&quot;\n",
+    "2. alphabet_soup(&quot;edabit&quot;) ➞ &quot;abdeit&quot;\n",
+    "3. alphabet_soup(&quot;hacker&quot;) ➞ &quot;acehkr&quot;\n",
+    "4. alphabet_soup(&quot;geek&quot;) ➞ &quot;eegk&quot;\n",
+    "5. alphabet_soup(&quot;javascript&quot;) ➞ &quot;aacijprstv&quot;\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ehllo'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alphabet_soup = lambda string: \"\".join(sorted(string))\n",
+    "\n",
+    "alphabet_soup(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q4) Suppose that you invest $10,000 for 10 years at an interest rate of 6% compounded monthly.\n",
+    "What will be the value of your investment at the end of the 10 year period?\n",
+    "\n",
+    "Create a function that accepts the principal p, the term in years t, the interest rate r, and the\n",
+    "number of compounding periods per year n. The function returns the value at the end of term\n",
+    "rounded to the nearest cent.\n",
+    "For the example above:\n",
+    "compound_interest(10000, 10, 0.06, 12) ➞ 18193.97\n",
+    "Note that the interest rate is given as a decimal and n=12 because with monthly compounding\n",
+    "there are 12 periods per year. Compounding can also be done annually, quarterly, weekly, or\n",
+    "daily.\n",
+    "Examples\n",
+    "\n",
+    "1. compound_interest(100, 1, 0.05, 1) ➞ 105.0\n",
+    "2. compound_interest(3500, 15, 0.1, 4) ➞ 15399.26\n",
+    "3. compound_interest(100000, 20, 0.15, 365) ➞ 2007316.26\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15399.26"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compound_interest(p, t, r, n):\n",
+    "    return round(p * (1 + (r/n))**(n*t),2)\n",
+    "\n",
+    "compound_interest(3500, 15, 0.1, 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q5) Write a function that takes a list of elements and returns only the integers.\n",
+    "Examples\n",
+    "\n",
+    "1. return_only_integer([9, 2, &quot;space&quot;, &quot;car&quot;, &quot;lion&quot;, 16]) ➞ [9, 2, 16]\n",
+    "2. return_only_integer([&quot;hello&quot;, 81, &quot;basketball&quot;, 123, &quot;fox&quot;]) ➞ [81, 123]\n",
+    "3. return_only_integer([10, &quot;121&quot;, 56, 20, &quot;car&quot;, 3, &quot;lion&quot;]) ➞ [10, 56, 20,\n",
+    "3]\n",
+    "4. return_only_integer([&quot;String&quot;, True, 3.3, 1]) ➞ [1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 2, 16]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_integer = lambda num: True if type(num)==int else False\n",
+    "return_only_integer = lambda listy: list(filter(is_integer, listy))\n",
+    "\n",
+    "return_only_integer([9, 2, \"space\", \"car\", \"lion\", 16])"
+   ]
   }
  ],
  "metadata": {
