--- a/Python_Programming_Assignments/Programming Assignment_25.ipynb
+++ b/Python_Programming_Assignments/Programming Assignment_25.ipynb
@@ -1,11 +1,200 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Q1) Create a function that takes three integer arguments (a, b, c) and returns the amount of\n",
+    "integers which are of equal value.\n",
+    "Examples\n",
+    "1. equal(3, 4, 3) ➞ 2\n",
+    "2. equal(1, 1, 1) ➞ 3\n",
+    "3. equal(3, 4, 1) ➞ 0\n",
+    "\n",
+    "Notes\n",
+    "* Your function must return 0, 2 or 3.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "equal = lambda x,y,z: max(Counter([x,y,z]), key = Counter([x,y,z]).get)\n",
+    "\n",
+    "equal(3,4,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q2) Write a function that converts a dictionary into a list of keys-values tuples.\n",
+    "Examples\n",
+    "1. dict_to_list({\n",
+    "&quot;D&quot;: 1,\n",
+    "&quot;B&quot;: 2,\n",
+    "&quot;C&quot;: 3\n",
+    "}) ➞ [(&quot;B&quot;, 2), (&quot;C&quot;, 3), (&quot;D&quot;, 1)]\n",
+    "2. dict_to_list({\n",
+    "&quot;likes&quot;: 2,\n",
+    "&quot;dislikes&quot;: 3,\n",
+    "&quot;followers&quot;: 10\n",
+    "}) ➞ [(&quot;dislikes&quot;, 3), (&quot;followers&quot;, 10), (&quot;likes&quot;, 2)]\n",
+    "\n",
+    "Notes\n",
+    "* Return the elements in the list in alphabetical order.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('dislikes', 3), ('followers', 10), ('likes', 2)]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_to_list = lambda dictt: sorted(list(dictt.items()))\n",
+    "\n",
+    "dict_to_list({ \"likes\": 2, \"dislikes\": 3, \"followers\": 10 }) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q3) \n",
+    "Write a function that creates a dictionary with each (key, value) pair being the (lower case,\n",
+    "upper case) versions of a letter, respectively.\n",
+    "Examples\n",
+    "1. mapping([&quot;p&quot;, &quot;s&quot;]) ➞ { &quot;p&quot;: &quot;P&quot;, &quot;s&quot;: &quot;S&quot; }\n",
+    "2. mapping([&quot;a&quot;, &quot;b&quot;, &quot;c&quot;]) ➞ { &quot;a&quot;: &quot;A&quot;, &quot;b&quot;: &quot;B&quot;, &quot;c&quot;: &quot;C&quot; }\n",
+    "3. mapping([&quot;a&quot;, &quot;v&quot;, &quot;y&quot;, &quot;z&quot;]) ➞ { &quot;a&quot;: &quot;A&quot;, &quot;v&quot;: &quot;V&quot;, &quot;y&quot;: &quot;Y&quot;, &quot;z&quot;: &quot;Z&quot; }\n",
+    "\n",
+    "Notes\n",
+    "* All of the letters in the input list will always be lowercase.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'p': 'P', 's': 'S'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapping = lambda listy: {key: key.upper() for key in listy}\n",
+    "\n",
+    "mapping([\"p\", \"s\"]) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q4) Write a function, that replaces all vowels in a string with a specified vowel.\n",
+    "Examples\n",
+    "1. vow_replace(&quot;apples and bananas&quot;, &quot;u&quot;) ➞ &quot;upplus und bununus&quot;\n",
+    "2. vow_replace(&quot;cheese casserole&quot;, &quot;o&quot;) ➞ &quot;chooso cossorolo&quot;\n",
+    "3. vow_replace(&quot;stuffed jalapeno poppers&quot;, &quot;e&quot;) ➞ &quot;steffed jelepene peppers&quot;\n",
+    "\n",
+    "Notes\n",
+    "* All words will be lowercase. Y is not considered a vowel.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'upplus und bununus'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vowels = 'aeiou'\n",
+    "vow_replace = lambda word, char: \"\".join([char if i in vowels else i for i in word])\n",
+    "\n",
+    "vow_replace(\"apples and bananas\", \"u\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q5) Create a function that takes a string as input and capitalizes a letter if its ASCII code is even\n",
+    "and returns its lower case version if its ASCII code is odd.\n",
+    "Examples\n",
+    "\n",
+    "1. ascii_capitalize(&quot;to be or not to be!&quot;) ➞ &quot;To Be oR NoT To Be!&quot;\n",
+    "2. ascii_capitalize(&quot;THE LITTLE MERMAID&quot;) ➞ &quot;THe LiTTLe meRmaiD&quot;\n",
+    "3. ascii_capitalize(&quot;Oh what a beautiful morning.&quot;) ➞ &quot;oH wHaT a BeauTiFuL\n",
+    "moRNiNg.&quot;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'To Be oR NoT To Be!'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ascii_capitalize = lambda string: \"\".join([i.lower() if ord(i)%2 else i.upper()  for i in string])\n",
+    "\n",
+    "ascii_capitalize(\"to be or not to be!\")"
+   ]
   }
  ],
  "metadata": {
