--- a/Python_Programming_Assignments/Programming Assignment_20.ipynb
+++ b/Python_Programming_Assignments/Programming Assignment_20.ipynb
@@ -1,11 +1,190 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Q1) Create a function that takes a list of strings and integers, and filters out the list so that it\n",
+    "returns a list of integers only.\n",
+    "Examples\n",
+    "\n",
+    "1. filter_list([1, 2, 3, &quot;a&quot;, &quot;b&quot;, 4]) ➞ [1, 2, 3, 4]\n",
+    "2. filter_list([&quot;A&quot;, 0, &quot;Edabit&quot;, 1729, &quot;Python&quot;, &quot;1729&quot;]) ➞ [0, 1729]\n",
+    "3. filter_list([&quot;Nothing&quot;, &quot;here&quot;]) ➞ []\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_integer = lambda char: type(char)==int\n",
+    "filter_list = lambda listy: list(filter(is_integer, listy))\n",
+    "\n",
+    "filter_list([1, 2, 3, \"a\", \"b\", 4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q2) Given a list of numbers, create a function which returns the list but with each element&#39;s\n",
+    "index in the list added to itself. This means you add 0 to the number at index 0, add 1 to the\n",
+    "number at index 1, etc...\n",
+    "Examples\n",
+    "\n",
+    "1. add_indexes([0, 0, 0, 0, 0]) ➞ [0, 1, 2, 3, 4]\n",
+    "2. add_indexes([1, 2, 3, 4, 5]) ➞ [1, 3, 5, 7, 9]\n",
+    "3. add_indexes([5, 4, 3, 2, 1]) ➞ [5, 5, 5, 5, 5]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_indexes = lambda listy: [c+i for c,i in zip(range(len(listy)), listy)]\n",
+    "add_indexes([1, 2, 3, 4, 5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q3) Create a function that takes the height and radius of a cone as arguments and returns the\n",
+    "volume of the cone rounded to the nearest hundredth. See the resources tab for the formula.\n",
+    "Examples\n",
+    "\n",
+    "1. cone_volume(3, 2) ➞ 12.57\n",
+    "2. cone_volume(15, 6) ➞ 565.49\n",
+    "3. cone_volume(18, 0) ➞ 0\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "565.49"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "cone_volume = lambda height, radius: round((math.pi * (radius**2) * (height/3)), 2)\n",
+    "cone_volume(15,6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q4) This Triangular Number Sequence is generated from a pattern of dots that form a triangle.\n",
+    "The first 5 numbers of the sequence, or dots, are:\n",
+    "    \n",
+    "1, 3, 6, 10, 15\n",
+    "\n",
+    "This means that the first triangle has just one dot, the second one has three dots, the third one\n",
+    "has 6 dots and so on.\n",
+    "\n",
+    "Write a function that gives the number of dots with its corresponding triangle number of the\n",
+    "sequence.\n",
+    "Examples\n",
+    "1. triangle(1) ➞ 1\n",
+    "2. triangle(6) ➞ 21\n",
+    "3. triangle(215) ➞ 23220\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "triangle = lambda num: sum(i for i in range(1, num+1))\n",
+    "\n",
+    "triangle(6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q5) Create a function that takes a list of numbers between 1 and 10 (excluding one number) and\n",
+    "returns the missing number.\n",
+    "Examples\n",
+    "1. missing_num([1, 2, 3, 4, 6, 7, 8, 9, 10]) ➞ 5\n",
+    "2. missing_num([7, 2, 3, 6, 5, 9, 1, 4, 8]) ➞ 10\n",
+    "3. missing_num([10, 5, 1, 2, 4, 6, 8, 3, 9]) ➞ 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_num = lambda listy : abs((len(listy)+1)*((len(listy)+1)+1)//2 - sum(listy))\n",
+    "\n",
+    "missing_num([10, 5, 1, 2, 4, 6, 8, 3, 9])"
+   ]
   }
  ],
  "metadata": {
