--- a/Python_Programming_Assignments/Programming Assignment_22.ipynb
+++ b/Python_Programming_Assignments/Programming Assignment_22.ipynb
@@ -1,11 +1,208 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Q1) Create a function that takes three parameters where:\n",
+    "\n",
+    "* x is the start of the range (inclusive). \n",
+    "* y is the end of the range (inclusive).\n",
+    "* n is the divisor to be checked against.\n",
+    " \n",
+    "Return an ordered list with numbers in the range that are divisible by the third parameter n.\n",
+    "Return an empty list if there are no numbers that are divisible by n.\n",
+    "Examples\n",
+    "1. list_operation(1, 10, 3) ➞ [3, 6, 9]\n",
+    "2. list_operation(7, 9, 2) ➞ [8]\n",
+    "3. list_operation(15, 20, 7) ➞ []\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 6, 9]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_operation = lambda x, y, n: [i for i in range(x, y) if i%n==0]\n",
+    "\n",
+    "list_operation(1, 10, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q2) Create a function that takes in two lists and returns True if the second list follows the first list\n",
+    "by one element, and False otherwise. In other words, determine if the second list is the first\n",
+    "list shifted to the right by 1.\n",
+    "Examples\n",
+    "1. simon_says([1, 2], [5, 1]) ➞ True\n",
+    "2. simon_says([1, 2], [5, 5]) ➞ False\n",
+    "3. simon_says([1, 2, 3, 4, 5], [0, 1, 2, 3, 4]) ➞ True\n",
+    "4. simon_says([1, 2, 3, 4, 5], [5, 5, 1, 2, 3]) ➞ False\n",
+    "Notes\n",
+    "\n",
+    "* Both input lists will be of the same length, and will have a minimum length of 2.\n",
+    "\n",
+    "* The values of the 0-indexed element in the second list and the n-1th indexed element\n",
+    "in the first list do not matter.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def simon_says(list1, list2):\n",
+    "    if (len(list1) != len(list2)) or (len(list1)<=1 or len(list2)<=1):\n",
+    "        return False\n",
+    "    elif list2[1:] == list1[0:-1]:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "print(simon_says([1, 2, 3, 4, 5], [0, 1, 2, 3, 4]))\n",
+    "print(simon_says([1, 2], [5, 5]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q3) A group of friends have decided to start a secret society. The name will be the first letter of\n",
+    "each of their names, sorted in alphabetical order.\n",
+    "Create a function that takes in a list of names and returns the name of the secret society.\n",
+    "\n",
+    "Examples\n",
+    "1. society_name([&quot;Adam&quot;, &quot;Sarah&quot;, &quot;Malcolm&quot;]) ➞ &quot;AMS&quot;\n",
+    "2. society_name([&quot;Harry&quot;, &quot;Newt&quot;, &quot;Luna&quot;, &quot;Cho&quot;]) ➞ &quot;CHLN&quot;\n",
+    "3. society_name([&quot;Phoebe&quot;, &quot;Chandler&quot;, &quot;Rachel&quot;, &quot;Ross&quot;, &quot;Monica&quot;, &quot;Joey&quot;])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CHLN'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "society_name = lambda names: \"\".join(sorted([c[0] for c in names]))\n",
+    "\n",
+    "society_name([\"Harry\", \"Newt\", \"Luna\", \"Cho\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q4) An isogram is a word that has no duplicate letters. Create a function that takes a string and\n",
+    "returns either True or False depending on whether or not it&#39;s an &quot;isogram&quot;.\n",
+    "Examples\n",
+    "1. is_isogram(&quot;Algorism&quot;) ➞ True\n",
+    "2. is_isogram(&quot;PasSword&quot;) ➞ False\n",
+    "###### Not case sensitive.\n",
+    "3. is_isogram(&quot;Consecutive&quot;) ➞ False\n",
+    "Notes\n",
+    "\n",
+    "* Ignore letter case (should not be case sensitive).\n",
+    "\n",
+    "* All test cases contain valid one word strings.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "is_isogram = lambda word: len(word.lower()) == len(set(word.lower()))\n",
+    "\n",
+    "print(is_isogram(\"Algorism\"))\n",
+    "print(is_isogram(\"PasSword\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q5) Create a function that takes a string and returns True or False, depending on whether the\n",
+    "characters are in order or not.\n",
+    "Examples\n",
+    "1. is_in_order(&quot;abc&quot;) ➞ True\n",
+    "2. is_in_order(&quot;edabit&quot;) ➞ False\n",
+    "3. is_in_order(&quot;123&quot;) ➞ True\n",
+    "4. is_in_order(&quot;xyzz&quot;) ➞ True\n",
+    "\n",
+    "Notes\n",
+    "* You don&#39;t have to handle empty strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_in_order = lambda string: string == \"\".join(sorted(string))\n",
+    "\n",
+    "is_in_order(\"xyzz\")"
+   ]
   }
  ],
  "metadata": {
